omx: Possible Memory leak in gst_caps_from_string

https://bugzilla.gnome.org/show_bug.cgi?id=784978